# PalindromicSums

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  palindromic.cpp  palindromic.h
tests/: CMakeLists.txt  test_palin.cpp
